// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header.tsx Snapshot tests matches snapshot of default state from 4.30.2025 1`] = `
<div>
  <header
    class="bg-background-header border-b border-primary-100 dark:border-primary-200 shadow-sm"
  >
    <div
      class="container mx-auto px-4 py-3 flex flex-col sm:flex-row sm:items-center sm:justify-between"
    >
      <div
        class="flex items-center justify-between"
      >
        <a
          class="flex items-center space-x-2 group"
          href="/"
        >
          <span
            class="text-2xl font-bold bg-gradient-to-r from-primary via-secondary to-accent bg-clip-text text-transparent"
          >
            MileageBuddy
          </span>
          <span
            class="hidden md:inline-block "
          >
            <img
              alt="Project Logo"
              class="h-8 w-8"
              data-nimg="1"
              decoding="async"
              height="8"
              loading="lazy"
              src="/img.jpg"
              style="color: transparent;"
              width="8"
            />
          </span>
        </a>
        <div
          class="sm:hidden flex items-center space-x-3"
        >
          <button
            aria-label="Toggle mobile menu"
            class="p-2 rounded-md text-neutral-text hover:bg-background-highlight"
          >
            <svg
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="hidden sm:flex flex-col sm:flex-row items-center mt-4 sm:mt-0 space-y-3 sm:space-y-0 sm:space-x-6"
      >
        <div
          class="relative"
        >
          <button
            class="flex items-center px-3 py-1 bg-background-elevated rounded-full text-sm text-neutral-text border border-primary-50 dark:border-primary-200 hover:bg-background-highlight transition-colors"
          >
            <div
              class="w-2 h-2 rounded-full bg-accent mr-2 animate-pulse"
            />
            <span
              class="hidden sm:inline"
              data-testid="profile-icon"
            >
              Profile
            </span>
            <svg
              class="h-4 w-4 ml-2"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 9l-7 7-7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <nav
          class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 space-x-0 sm:space-x-2 w-full sm:w-auto"
        >
          <a
            class="nav-link w-full sm:w-auto text-center"
            href="https://www.linkedin.com/in/adam-hinton/"
            target="_blank"
          >
            Adam Hinton
          </a>
          <a
            class="nav-link w-full sm:w-auto text-center"
            href="/calculator"
          >
            Calculator
          </a>
          <a
            class="nav-link w-full sm:w-auto text-center"
            href="https://github.com/adamhinton/mileagebuddy/"
          >
            Source
          </a>
        </nav>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header.tsx Snapshot tests matches snapshot with profile dropdown open from 4.30.2025 1`] = `
<div>
  <header
    class="bg-background-header border-b border-primary-100 dark:border-primary-200 shadow-sm"
  >
    <div
      class="container mx-auto px-4 py-3 flex flex-col sm:flex-row sm:items-center sm:justify-between"
    >
      <div
        class="flex items-center justify-between"
      >
        <a
          class="flex items-center space-x-2 group"
          href="/"
        >
          <span
            class="text-2xl font-bold bg-gradient-to-r from-primary via-secondary to-accent bg-clip-text text-transparent"
          >
            MileageBuddy
          </span>
          <span
            class="hidden md:inline-block "
          >
            <img
              alt="Project Logo"
              class="h-8 w-8"
              data-nimg="1"
              decoding="async"
              height="8"
              loading="lazy"
              src="/img.jpg"
              style="color: transparent;"
              width="8"
            />
          </span>
        </a>
        <div
          class="sm:hidden flex items-center space-x-3"
        >
          <button
            aria-label="Toggle mobile menu"
            class="p-2 rounded-md text-neutral-text hover:bg-background-highlight"
          >
            <svg
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="hidden sm:flex flex-col sm:flex-row items-center mt-4 sm:mt-0 space-y-3 sm:space-y-0 sm:space-x-6"
      >
        <div
          class="relative"
        >
          <button
            class="flex items-center px-3 py-1 bg-background-elevated rounded-full text-sm text-neutral-text border border-primary-50 dark:border-primary-200 hover:bg-background-highlight transition-colors"
          >
            <div
              class="w-2 h-2 rounded-full bg-accent mr-2 animate-pulse"
            />
            <span
              class="hidden sm:inline"
              data-testid="profile-icon"
            >
              Profile
            </span>
            <svg
              class="h-4 w-4 ml-2"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 9l-7 7-7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <div
            class="absolute right-0 mt-2 w-48 bg-background-elevated rounded-md shadow-lg border border-primary-50 dark:border-primary-200 z-40"
          >
            <div
              class="p-2"
            >
              <div
                class="text-sm font-medium text-neutral-text mb-2 border-b border-primary-50 dark:border-primary-200 pb-2"
              >
                testuser@example.com
              </div>
              <button
                class="w-full text-left px-3 py-2 text-sm text-red-500 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-md transition-colors"
              >
                Sign Out
              </button>
            </div>
          </div>
        </div>
        <nav
          class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 space-x-0 sm:space-x-2 w-full sm:w-auto"
        >
          <a
            class="nav-link w-full sm:w-auto text-center"
            href="https://www.linkedin.com/in/adam-hinton/"
            target="_blank"
          >
            Adam Hinton
          </a>
          <a
            class="nav-link w-full sm:w-auto text-center"
            href="/calculator"
          >
            Calculator
          </a>
          <a
            class="nav-link w-full sm:w-auto text-center"
            href="https://github.com/adamhinton/mileagebuddy/"
          >
            Source
          </a>
        </nav>
      </div>
    </div>
  </header>
</div>
`;
